<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Signup_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_2_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_arrow_back_24"
            android:transitionName="transition_back_btn"/>

        <TextView
            android:id="@+id/signup_2_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textAllCaps="true"
            android:transitionName="transition_title_text"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_below="@+id/create_account">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp"/>

             <RadioGroup
                 android:id="@+id/radio_group"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp">

                 <RadioButton
                     android:id="@+id/radio_btn_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/male"/>

                 <RadioButton
                     android:id="@+id/radio_btn_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/female"/>

                 <RadioButton
                     android:id="@+id/radio_btn_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/other"/>

             </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_age"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup_2_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:background="@color/black"
            android:onClick="callNextSignupScreen"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_2_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_semibold"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>

    </LinearLayout>

</ScrollView>