<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Authentication.ForgotPassword"
    android:background="@color/white"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back_24"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_details"
            android:textSize="18sp"
            android:fontFamily="@font/muli"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/background_grey"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_phone_24"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_SMS"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/mobile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/background_grey"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_email_24"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_mail"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>