<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:padding="30dp"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:srcCompat="@drawable/ic_health_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/heading"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_heading"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                tools:ignore="ButtonStyle"
                android:layout_marginTop="30dp"
                android:text="@string/Login"
                android:textColor="@color/black"
                android:background="@color/colorPrimary"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="callSignupScreen"
                android:text="@string/Signup"
                android:textColor="@color/black"
                android:transitionName="transition_signup"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>